# llm-proxifier

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  RELEASE_TEMPLATE.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  test_imports.py
.github/: RELEASE_TEMPLATE.md
.github/workflows/: release.yml
config/: auth.yaml  models.yaml
docs/: advanced-config.md  api.md  dashboard.md  features.md  installation.md
scripts/: build.sh  dev_install.sh  docker-build.sh  docker-start.sh  get_version.sh  release.sh  start_proxy.sh  stop_proxy.sh
src/: __init__.py  _version.py  auth.py  cli.py  config.py  config_notifications.py  dashboard.py  main.py  middleware.py  model_manager.py  proxy_handler.py  queue_manager.py  utils.py
src/llm_proxifier/: __init__.py  _version.py  audit_logger.py  auth.py  cli.py  config.py  config_api.py  config_notifications.py  dashboard.py  main.py  middleware.py  model_manager.py  proxy_handler.py  queue_manager.py  utils.py
static/css/: dashboard.css
static/js/: config-editor.js  connection-health.js  dashboard.js  priority-manager.js  queue-monitor.js  resource-groups.js
templates/: dashboard.html
tests/: simple_test.py  test_config.py  test_dashboard_integration.py  test_model_manager.py  test_utils.py
